src/tests/lmstudio_test_results.txt
Tests run: 9
Errors: 0
Failures: 1
Failure 1: test_fallback_to_template (__main__.TestLMStudioIntegration.test_fallback_to_template)
Error: Traceback (most recent call last):
  File "C:\Users\snowm\Desktop\VSCode\RebelDESK\src\tests\test_lmstudio_integration.py", line 247, in test_fallback_to_template
    self.assertIsNotNone(docstring)
    ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^
AssertionError: unexpectedly None

